[package]
name = "maze_generator"
version = "2.0.1-next"
authors = ["Finn-Thorben Sell <dev@finn-thorben.me>"]
edition = "2018"
description = "A library of different maze generation algorithms."
documentation = "https://docs.rs/maze_generator/"
readme = "README.md"
repository = "https://github.com/ftsell/maze_generator.git"
license = "MIT"
keywords = ["maze", "generator"]
categories = ["algorithms", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.7.3"
# rand_chacha = "0.2.2"
# petgraph = "0.5.1"
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
petgraph = { git = "https://github.com/zendurix/petgraph.git", branch = "better_no_std", default-features = false, features = ["graphmap"] }
thiserror = "1.0.30"
# anyhow = "1.0.56"
anyhow = { version = "1.0.56",  default-features = false }

[dev-dependencies]
quickcheck = "0.9.1"
clap = { version = "3.1.5", features = ["derive"] }

[features]
default = [ "std", "ellers_algorithm", "growing_tree", "prims_algorithm", "recursive_backtracking" ]

std = []
ellers_algorithm = [ "std" ]
growing_tree = []
prims_algorithm = []
recursive_backtracking = []
